--- a/test.html
+++ b/test.html
@@ -419,7 +419,8 @@
                         yolo: {
                             model_path: 'models/yolo26.onnx',
                             confidence: 0.5,
-                            nms_threshold: 0.45
+                            nms_threshold: 0.45,
+                            use_cuda: false
                         },
                         tracker: {
                             enabled: true
