--- a/test_v4.html
+++ b/test_v4.html
@@ -541,7 +541,7 @@
                     frame_id: frameId,
                     config: {
                         yolo: {
-                            model_path: 'models/yolo26.onnx',
+                            model_path: '/home/xx509/TrackFlow/models/yolo26.onnx',
                             confidence: 0.5,
                             nms_threshold: 0.45,
                             use_cuda: false
