--- a/test_v4.html
+++ b/test_v4.html
@@ -544,7 +544,7 @@
                             model_path: '/home/xx509/TrackFlow/models/yolo26.onnx',
                             confidence: 0.5,
                             nms_threshold: 0.45,
-                            use_cuda: false
+                            use_cuda: true
                         },
                         tracker: {
                             enabled: true
